# Google-Translator-API

./: .gitignore  CMakeLists.txt  README.md
gtranslator/: CMakeLists.txt
gtranslator/include/: gtranslator.h
gtranslator/src/: gtranslator.cpp
tests/: CMakeLists.txt  example.cpp
